logs/offboard_pkg/build.make.410.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle_Time()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:331:45: error: no matching function for call to ‘TaskManager::is_GPS_succuss(Eigen::Vector3d&)’
  331 |                 if(uav[i].is_GPS_succuss(lla))
      |                                             ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:94:10: note: candidate: ‘bool TaskManager::is_GPS_succuss(Eigen::Vector3d&, bool)’
   94 |     bool is_GPS_succuss(Eigen::Vector3d &pos, bool change_yaw);
      |          ^~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:94:10: note:   candidate expects 2 arguments, 1 provided
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
